Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122118

QML Camera Application Example does not work with Android 11 device

XMLWordPrintable

    • Android
    • c41a483e6 (dev), f5408905c (6.7), 966c7b150 (tqtc/lts-6.5)
    • 2024wk16FOQtforAndroid, 2024wk18FOQtforAndroid, 2024wk20s2FOQtforAndroid

      QML Camera Application Example bundled with Qt 6.6.1 does not work with Android 11 device.

      The result from a trial with an Emulated Android device (Pixel 7 API 30 x86) on Android Studio (Hedgehog | 2023.1.1 Patch 1):

        - The screen of the application blacks out. (only buttons appear.) (6_6_1_QMLCamera1.png)
        - The image from camera on the Pixel 7 does not appear.
        - The buttons are not operatable.
        - After minimizing/ reopening  the QML Camera Application, the screen of the application is completely blacks out. (even buttons do not appear.) (6_6_1_QMLCamera2.png)
        - The default camera application of the device works.

       

        1. 6_6_1_QMLCamera2.png
          71 kB
          Hitoshi Ito
        2. 6_6_1_QMLCamera1.png
          106 kB
          Hitoshi Ito
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bartlomiejmoskal Bartlomiej Moskal
            hitoshiito Hitoshi Ito
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes