src/plugins/multimedia/ffmpeg/qandroidcameraframe.cpp
@@ -12,9 +12,19 @@ Q_DECLARE_JNI_CLASS(AndroidImageFormat, "android/graphics/ImageFormat");
 Q_DECLARE_JNI_CLASS(AndroidImage, "android/media/Image")
 Q_DECLARE_JNI_TYPE(AndroidImagePlaneArray, "[Landroid/media/Image$Plane;")
 Q_DECLARE_JNI_CLASS(JavaByteBuffer, "java/nio/ByteBuffer")
+Q_DECLARE_JNI_CLASS(QtVideoDeviceManager,
+                    "org/qtproject/qt/android/multimedia/QtVideoDeviceManager");
 
 QT_BEGIN_NAMESPACE
 static Q_LOGGING_CATEGORY(qLCAndroidCameraFrame, "qt.multimedia.ffmpeg.android.camera.frame");
+
+namespace {
+bool isWorkaroundForEmulatorNeeded() {
+    const static bool workaroundForEmulator
+                 = QtJniTypes::QtVideoDeviceManager::callStaticMethod<jboolean>("isEmulator");
+    return workaroundForEmulator;
+}
+}
 
 bool QAndroidCameraFrame::parse(const QJniObject &frame)
 {
@@ -130,12 +140,25 @@ bool QAndroidCameraFrame::parse(const QJniObject &frame)
         m_planes[mapIndex].data = buffer[arrayIndex];
     };
 
+    int width = frame.callMethod<jint>("getWidth");
+    int height = frame.callMethod<jint>("getHeight");
+    m_size = QSize(width, height);
+
     switch (calculedPixelFormat) {
     case QVideoFrameFormat::Format_YUV420P:
         m_numberPlanes = 3;
         copyPlane(0, 0);
         copyPlane(1, 1);
         copyPlane(2, 2);
+
+        if (isWorkaroundForEmulatorNeeded()) {
+            for (int i = 0; i < 3; ++i) {
+                const int dataSize = (i == 0) ? width * height : width * height / 4;
+                m_planes[i].data = new uint8_t[dataSize];
+                memcpy(m_planes[i].data, buffer[i], dataSize);
+            }
+        }
+
         m_pixelFormat = QVideoFrameFormat::Format_YUV420P;
         break;
     case QVideoFrameFormat::Format_NV12:
@@ -160,10 +183,6 @@ bool QAndroidCameraFrame::parse(const QJniObject &frame)
 
     long timestamp = frame.callMethod<jlong>("getTimestamp");
     m_timestamp = timestamp / 1000;
-
-    int width = frame.callMethod<jint>("getWidth");
-    int height = frame.callMethod<jint>("getHeight");
-    m_size = QSize(width, height);
 
     return true;
 }
@@ -193,6 +212,13 @@ QAndroidCameraFrame::~QAndroidCameraFrame()
     QJniEnvironment jniEnv;
     if (m_frame)
         jniEnv->DeleteGlobalRef(m_frame);
+
+    if (isWorkaroundForEmulatorNeeded()) {
+        if (m_pixelFormat == QVideoFrameFormat::Format_YUV420P) {
+            for (int i = 0; i < 3; ++i)
+                delete[] m_planes[i].data;
+        }
+    }
 }
 
 QT_END_NAMESPACE
